# Backend

./: .gitignore  README.md  docker-compose.yml  enviroment.yml  main.py  pyproject.toml
src/: auth.py  database.py
src/assets/: data.json
src/config/: response_schema.py
src/controllers/: healthy_controller.py  product_controller.py  user_controller.py
src/models/: product.py  user.py  user_model.py
src/modules/auth/: controller.py  jwt.py  route.py  schema.py  service.py  service_jwt.py
src/modules/database/: database.py  redis.py
src/modules/health/: controller.py  route.py  service.py
src/modules/products/: controller.py  route.py  schema.py  service.py
src/modules/users/: controller.py  model.py  route.py  schema.py  schema_dto.py  service.py
src/routes/: healthy_route.py  product_route.py  user_route.py
src/schemas/: response_schema.py  user_dto.py  user_schema.py
src/services/: healthy_service.py  product_service.py  user_service.py
